# quilting

./: .gitignore  .parcelrc  Cargo.toml  Makefile.toml  README.md  esbuild.js  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.js
2022-june-21-A/: tessellation-worker.b5cf35a0.js.map  tessellation.html
2022-june-21-B/: tessellation-worker.d50efc29.js  tessellation-worker.d50efc29.js.map  tessellation-worker.dbff4fc9.js  tessellation-worker.dbff4fc9.js.map  tessellation.548f0c51.js  tessellation.548f0c51.js.map  tessellation.b71c08e7.js  tessellation.b71c08e7.js.map  tessellation.html
2022-june-24-terrain/: index.af78ded7.js  index.af78ded7.js.map  index.html  tessellation-worker.86c97502.js  tessellation-worker.86c97502.js.map
examples/: billowing-cube.html  bubbly-bunny.html  bunny-made-of-billowing-sails.html  bunny-patches.html  bunny.html  bunny.js  camera.js  cl-valued-random-weights.html  conformal-patch.html  cube.html  cube.ts  get-an-arbitrary-mesh.ts  index.html  load-textures.js  lod-patch.html  patch.js  patchwork.html  pico-util.js  polys.js  position-in-element.ts  quilted-bunny.html  random-mesh.ts  reflected-bunny.html  reflected-bunny.js  setup-camera.js  simple-bunny-polys.js  simple.ts  tessellation.html  tessellation.ts  transformation.html  transformation.ts  while-tab-focus.ts  whileTabFocus.ts
gl/: lib.glsl  patch.glsl  transformation.glsl  triangle.vs.glsl
gpu/: __init__.py  lib.glsl
june-21/: tessellation-worker.b5cf35a0.js  tessellation.55e84101.js  tessellation.55e84101.js.map  tessellation.html
(+104 files in other folders)
