[tool.poetry]
name = "quilting"
version = "0.1.0"
description = ""
authors = ["Micah Fitch <micahscopes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
sympy = "^1.9"
alglbraic = {path = "../../alglbraic"}
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
